[metadata]
name = pinoice-jabezborja
version = 0.0.1
author = Jabez Borja
author_email = jabez.koowentu@gmail.com
description = A high-level tagalog-based syntax programming language 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jabezborja/Pinoice
project_urls =
    Bug Tracker = https://github.com/jabezborja/Pinoice/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pinoice
